--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
+﻿<!DOCTYPE HTML public "-//W3O//DTD W3 HTML 3.0//EN">
 <html>
+<head><title>Basketball</title></head>
+<body>
+<frameset cols="250,*">
+<frame src="sidebar.html">
+<frame src="main.html" name="main">
+</frameset>
+</body>
 </html>
