--- a/sidebar.html
+++ b/sidebar.html
@@ -4,6 +4,7 @@
 <center>
 <a href="main.html" target="main" >Home</a><br>
 <a href="products.html" target="main">Products</a>
+<a href="team.html" target = "main">Management Team Page</a>
 </center>
 </font>
 </body>
