--- a/products.html
+++ b/products.html
@@ -1,5 +1,9 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.0//EN">
+﻿<!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8">
+<title>Basketball Products</title>
+</head>
 <body>
 <table cellspacing="10" width="100%" height="200px" cellpadding="0" border="0">
 <tr>
@@ -15,8 +19,7 @@
 </tr>
 <tr height="100px">
 <td valign="top" align="left" height="150px" colspan="2">
-<font face="sans-serif" size="4"><p>The Wilson basketball is known for its durability, excellent grip, and superior performance. Made with high-quality rubber or leather, it provides great control and bounce, making it ideal for both indoor and outdoor play. Designed for athletes of all levels, it's a trusted choice for competitive basketball games.</p>
-</font>
+<font face="sans-serif" size="4"><p>The Wilson basketball is known for its durability, excellent grip, and superior performance. Made with high-quality rubber or leather, it provides great control and bounce, making it ideal for both indoor and outdoor play. Designed for athletes of all levels, it's a trusted choice for competitive basketball games.</p></font>
 </td>
 </tr>
 <tr>
@@ -27,7 +30,6 @@
 <font face="'Comic Sans MS'" color="gray"><center><p><b><u>Wishlist</u></b></p></center></font>
 </td>
 </tr>
-
 <tr>
 <td rowspan="3" width="200px">
 <img src="shoes.jpg" width="200px">
@@ -41,9 +43,7 @@
 </tr>
 <tr height="100px">
 <td valign="top" align="left" height="150px" colspan="2">
-<font face="sans-serif" size="4"><p>The Jumpman MVP Men's Basketball Shoes (White/Neutral) offer a perfect blend of style, comfort, and performance. Featuring a sleek white design with neutral accents, these shoes provide excellent support and cushioning for athletes. Ideal for both on-court play and casual wear, they ensure optimal traction and durability.
-</p>
-</font>
+<font face="sans-serif" size="4"><p>The Jumpman MVP Men's Basketball Shoes (White/Neutral) offer a perfect blend of style, comfort, and performance. Featuring a sleek white design with neutral accents, these shoes provide excellent support and cushioning for athletes. Ideal for both on-court play and casual wear, they ensure optimal traction and durability.</p></font>
 </td>
 </tr>
 <tr>
@@ -54,7 +54,6 @@
 <font face="'Comic Sans MS'" color="gray"><center><p><b><u>Wishlist</u></b></p></center></font>
 </td>
 </tr>
-
 <tr>
 <td rowspan="3" width="200px">
 <img src="jersey.png" width="200px">
@@ -68,9 +67,7 @@
 </tr>
 <tr height="100px">
 <td valign="top" align="left" height="150px" colspan="2">
-<font face="sans-serif" size="4"><p>Every team has its true colors, an unmistakable identity that sets it apart from the rest of the league. Honoring a rich hoops heritage, this Los Angeles Lakers jersey is inspired by what the pros wear on the hardwood, from squad details to lightweight, sweat-wicking mesh. It helps keep you dry and cool on or off the court while you rep your favorite player and the game you love.
-</p>
-</font>
+<font face="sans-serif" size="4"><p>Every team has its true colors, an unmistakable identity that sets it apart from the rest of the league. Honoring a rich hoops heritage, this Los Angeles Lakers jersey is inspired by what the pros wear on the hardwood, from squad details to lightweight, sweat-wicking mesh. It helps keep you dry and cool on or off the court while you rep your favorite player and the game you love.</p></font>
 </td>
 </tr>
 <tr>
@@ -94,8 +91,7 @@
 </tr>
 <tr height="100px">
 <td valign="top" align="left" height="150px" colspan="2">
-<font face="sans-serif" size="4"><p>The basketball net is made of high-quality nylon, ensuring durability and resistance to wear. Designed to fit standard rims, it enhances the game experience with its professional look and sound when the ball swishes through. Perfect for both indoor and outdoor courts.</p>
-</font>
+<font face="sans-serif" size="4"><p>The basketball net is made of high-quality nylon, ensuring durability and resistance to wear. Designed to fit standard rims, it enhances the game experience with its professional look and sound when the ball swishes through. Perfect for both indoor and outdoor courts.</p></font>
 </td>
 </tr>
 <tr>
@@ -106,7 +102,6 @@
 <font face="'Comic Sans MS'" color="gray"><center><p><b><u>Wishlist</u></b></p></center></font>
 </td>
 </tr>
-
 <tr>
 <td rowspan="3" width="200px">
 <img src="backb.jpg" width="200px">
@@ -120,8 +115,7 @@
 </tr>
 <tr height="100px">
 <td valign="top" align="left" height="150px" colspan="2">
-<font face="sans-serif" size="4"><p>This basketball backboard is made of durable acrylic, providing a professional rebound feel. Designed for both casual and competitive play, it features a sturdy mounting system, ensuring stability during intense games. Ideal for home or gym setups.</p>
-</font>
+<font face="sans-serif" size="4"><p>This basketball backboard is made of durable acrylic, providing a professional rebound feel. Designed for both casual and competitive play, it features a sturdy mounting system, ensuring stability during intense games. Ideal for home or gym setups.</p></font>
 </td>
 </tr>
 <tr>
@@ -132,7 +126,6 @@
 <font face="'Comic Sans MS'" color="gray"><center><p><b><u>Wishlist</u></b></p></center></font>
 </td>
 </tr>
-
 <tr>
 <td rowspan="3" width="200px">
 <img src="starter.jpg" width="200px">
@@ -146,11 +139,40 @@
 </tr>
 <tr height="100px">
 <td valign="top" align="left" height="150px" colspan="2">
-<font face="sans-serif" size="4"><p>The complete basketball set includes all essential items: a high-quality Wilson basketball, Jumpman MVP shoes, a durable net, a sturdy backboard, and an official Lakers jersey. This package is perfect for any basketball enthusiast looking to elevate their game with top-tier equipment.</p>
-</font>
+<font face="sans-serif" size="4"><p>The complete basketball set includes all essential items: a high-quality Wilson basketball, Jumpman MVP shoes, a durable net, a sturdy backboard, and an official Lakers jersey. This package is perfect for any basketball enthusiast looking to elevate their game with top-tier equipment.</p></font>
 </td>
 </tr>
-
+<tr>
+<td width="50%">
+<font face="'Comic Sans MS'" color="gold"><center><p><b><u>Add to Cart</u></b></p></center></font>
+</td>
+<td width="50%">
+<font face="'Comic Sans MS'" color="gray"><center><p><b><u>Wishlist</u></b></p></center></font>
+</td>
+</tr>
 </table>
+<p><font face="sans-serif" size="4" color="blue"><b>Featured Products:</b></font></p>
+<ol>
+<li><b>Wilson Basketball</b></li>
+<li><b>Basketball Shoes</b></li>
+<li><b>Men's Jersey</b></li>
+<li><b>Basketball Net</b></li>
+<li><b>Basketball Backboard</b></li>
+<li><b>Journey to Lebron Starterpack bundle</b></li>
+</ol>
+<p><font face="sans-serif" size="4" color="green"><b>Product Categories:</b></font></p>
+<ul>
+<li>Balls</li>
+<li>Shoes</li>
+<li>Apparel</li>
+<li>Accessories</li>
+</ul>
+<p><a href="https://www.nba.com" target="_blank">NBA Official Site</a></p>
+<p><a href="catalog.pdf" download>Download Product Catalog</a></p>
+<p><a href="mailto:contact@example.com">Contact Me</a></p>
+<p id="lastModified"></p>
+<script>
+document.getElementById("lastModified").innerText="Last Modified: "+document.lastModified;
+</script>
 </body>
 </html>
