--- a/AboutUs.html
+++ b/AboutUs.html
@@ -31,7 +31,7 @@
                 <TD>
                     <FONT FACE="Verdana, Geneva, sans-serif" SIZE="5" COLOR="coral" ALIGN = "justify">
                         <H3><u><i>Our Story</i></u></H3>
-                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="3" COLOR="coral">
+                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="3" COLOR="black">
                     <p> 
                       Basketball has always been more than just a game for Betty and Barbara, it was
                        a passion that started on their neighborhood court. From early morning shootarounds 
@@ -58,7 +58,7 @@
                 <TD>
                     <FONT FACE="Verdana, Geneva, sans-serif" SIZE="5" COLOR="coral" ALIGN = "justify">
                         
-                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="3" COLOR="coral">
+                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="3" COLOR="black">
                     <p> 
                       Inspired by their love for the game and a desire to
                        share it with others, they founded <b>Betty and Barbara&rsquo;s
@@ -82,7 +82,7 @@
                 <TD WIDTH = "60%">
                     <FONT FACE="Verdana, Geneva, sans-serif" SIZE="5" COLOR="coral" ALIGN = "justify">
                         <H3><u><i>Early Days and Where we are now</i></u></H3> <br>
-                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="3" COLOR="coral">
+                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="3" COLOR="black">
                     <p> 
                       What started as two best friends sharing a passion for 
                       basketball has grown into a thriving business that serves 
@@ -158,7 +158,7 @@
                 <TD WIDTH = "50%">
                     <FONT FACE="Verdana, Geneva, sans-serif" SIZE="5" COLOR="coral" ALIGN = "justify">
                         
-                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="3" COLOR="coral">
+                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="3" COLOR="black">
                     <p> 
                       <p> Over time, they decided to expand the business to target more serious players as well. 
                         Leaning in towards professional play we decied to align our services with the official <b>National
