--- a/OurServices.html
+++ b/OurServices.html
@@ -15,7 +15,7 @@
      <table border="1" width="100%">
         <tr>
             <td bgcolor="silver">
-                <h2><b>Our Unique Services</b></h2>
+                <font size="5" face="Arial"><b>Our Unique Services</b></font>
                 <ul>
                     <li><b>Customized Training Programs</b>
                         <ul>
@@ -63,7 +63,7 @@
     </table>
     <table border="1" width="100%">
         <tr>
-             <h2 align="center" style="color: white;">Pricing and Offers</h2>
+             <h2 align="center">Pricing and Offers</h2>
             </td>
         </tr>
         <tr>
@@ -87,7 +87,7 @@
             </td>
         </tr>
         <td valign="top" width="30%">
-                <img src="" alt="Description of Image" width="100%">
+                <img src="photo.png" width="100%">
             </td>
 
     </table>
