--- a/products.html
+++ b/products.html
@@ -5,6 +5,25 @@
 <title>Basketball Products</title>
 </head>
 <body>
+          <TABLE WIDTH="100%" BGCOLOR="coral" CELLSPACING="0" CELLPADDING="0">
+            
+            <TR HEIGHT = 30>
+                </tr>
+                <Tr>
+                <TD ALIGN="center" VALIGN="top">
+                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="5" COLOR="white">
+                        <H2>Products Page</h2> 
+                    </FONT
+                </TD>
+            </TR>
+            <TR>
+                <TD ALIGN="center" VALIGN="top">
+                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="5" COLOR="white">
+                        <H6><i>Here are all our products - For pros and casuals! !</i></H6>
+                    </FONT>
+                </TD>
+            </TR>
+        </TABLE>
 <table cellspacing="10" width="100%" height="200px" cellpadding="0" border="0">
 <tr>
 <td rowspan="3" width="200px">
