--- a/OurServices.html
+++ b/OurServices.html
@@ -86,9 +86,12 @@
                 </ul>
             </td>
         </tr>
-        <td valign="top" width="30%">
+        <td valign="top" width="50%">
                 <img src="photo.png" width="100%">
             </td>
+        <td valign="top" width = "50%">
+            <img src="photo2.jpg" width="100%">
+        </td>
 
     </table>
     </body>
