--- a/products.html
+++ b/products.html
@@ -188,7 +188,14 @@
 </ul>
 <p><a href="https://www.nba.com" target="_blank">NBA Official Site</a></p>
 <p><a href="catalog.pdf" download>Download Product Catalog</a></p>
-<p><a href="mailto:contact@example.com">Contact Me</a></p>
+<FONT COLOR="white">
+                    <h1><i> See something that is wrong? Or have a question? Contact us!</i></h1> 
+                    <a href="mailto:samyheroman@gmail.com">
+                        <FONT COLOR="white">Click here to send us an email!</FONT>
+                    </a> 
+                    <br>
+                    <p>Kindly note: This will open your default email client</p>
+                </FONT>
 <p id="lastModified"></p>
 <script>
 document.getElementById("lastModified").innerText="Last Modified: "+document.lastModified;
