--- a/OurServices.html
+++ b/OurServices.html
@@ -90,7 +90,7 @@
                 <img src="photo.png" width="100%">
             </td>
         <td valign="top" width = "50%">
-            <img src="photo2.jpg" width="100%">
+            <img src="photo2.jpg" width="300px">
         </td>
 
     </table>
