--- a/team.html
+++ b/team.html
@@ -2,7 +2,25 @@
 <html>
 <body>
 <font face="Arial">
-<h1>Meet our Team</h1>
+        <TABLE WIDTH="100%" BGCOLOR="coral" CELLSPACING="0" CELLPADDING="0">
+            
+            <TR HEIGHT = 30>
+                </tr>
+                <Tr>
+                <TD ALIGN="center" VALIGN="top">
+                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="5" COLOR="white">
+                        <H2>Meet the Team</h2> 
+                    </FONT
+                </TD>
+            </TR>
+            <TR>
+                <TD ALIGN="center" VALIGN="top">
+                    <FONT FACE="Verdana, Geneva, sans-serif" SIZE="5" COLOR="white">
+                        <H6><i>Get to know the faces running the show!</i></H6>
+                    </FONT>
+                </TD>
+            </TR>
+        </TABLE>
 <hr>
 <p>At Betty and Barbara’s Basketball Bonanza, we’re more than just a business—we’re a team of passionate basketball enthusiasts dedicated to bringing the best products and services to the game we love. Our leadership and staff are committed to excellence, innovation, and making basketball accessible and exciting for everyone. Get to know the faces behind the Bonanza!</p>
 <hr>
@@ -31,7 +49,14 @@ David is the voice behind our brand, leading all marketing efforts, from social 
 <li>PrestoStats</li>
 <li>Wooter Apparel</li>
 </ol>
-<p><a href="mailto:contact@bettybarb.com">Contact Us!</a></p>
+<FONT COLOR="white">
+                    <h1><i> See something that is wrong? Or have a question? Contact us!</i></h1> 
+                    <a href="mailto:samyheroman@gmail.com">
+                        <FONT COLOR="white">Click here to send us an email!</FONT>
+                    </a> 
+                    <br>
+                    <p>Kindly note: This will open your default email client</p>
+                </FONT>
 </font>
 <p>Today's Date: <span id="date"></span></p>
 <script>
