--- a/OurServices.html
+++ b/OurServices.html
@@ -94,5 +94,11 @@
         </td>
 
     </table>
+     <p><a href="brochure.pdf" download>Download</a> the brochure for more information!</p>
+     <p>Last Modified: <span id="date"></span></p>
+     <script>
+      document.getElementById("date").innerHTML = new Date().toDateString();
+     </script>
+     <p><a href="https://www.youtube.com/watch?v=PRnZESvGnAg">View</a> our Basketball simulation!</p>
     </body>
  </html>
