--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 ﻿<!DOCTYPE HTML public "-//W3O//DTD W3 HTML 3.0//EN">
 <html>
-<head><title>Basketball</title></head>
-<body>
-<frameset cols="250,*">
-<frame src="sidebar.html">
-<frame src="main.html" name="main">
+<head>
+<title>Index</title>
+</head>
+<frameset cols="25%,75%">
+<frame src="sidebar.html" name="sidebar">
+<frame src="rightSidebar.html" name="main">
 </frameset>
+<noframes>
+<body>
+<p>Frames not supported.</p>
 </body>
+</noframes>
 </html>
