--- a/sidebar.html
+++ b/sidebar.html
@@ -2,8 +2,11 @@
 <body bgcolor="black">
 <font face="Arial, Helvetica, sans-serif" color="white">
 <center>
-<a href="main.html" target="main" >Home</a><br>
-<a href="products.html" target="main">Products</a>
+<a href="rightSidebar.html" target="main" >Home</a><br>
+<a href="AboutUs.html" target="main" >About Us</a><br>
+<a href="OurServices.html" target="main" >Our Services</a><br>
+<a href="products.html" target="main">Products</a><br>
+<a href="customertestimonials.html" target="main" >Testimonials</a><br>
 <a href="team.html" target = "main">Management Team Page</a>
 </center>
 </font>
