--- a/team.html
+++ b/team.html
@@ -49,6 +49,9 @@ David is the voice behind our brand, leading all marketing efforts, from social 
 <li>PrestoStats</li>
 <li>Wooter Apparel</li>
 </ol>
+<table width = "100%">
+<tr bgcolor="coral">
+<td align="center">
 <FONT COLOR="white">
                     <h1><i> See something that is wrong? Or have a question? Contact us!</i></h1> 
                     <a href="mailto:samyheroman@gmail.com">
@@ -58,6 +61,9 @@ David is the voice behind our brand, leading all marketing efforts, from social 
                     <p>Kindly note: This will open your default email client</p>
                 </FONT>
 </font>
+</td>
+</tr>
+</table>
 <p>Today's Date: <span id="date"></span></p>
 <script>
 document.getElementById("date").innerHTML = new Date().toDateString();
