--- a/customertestimonials.html
+++ b/customertestimonials.html
@@ -165,10 +165,10 @@
           </font>
 
     <!-- Last Modified Date -->
-     <P><B><FONT SIZE="4" COLOR="coral">Last Modified Date:</FONT></B>  
+     <P><B><FONT SIZE="4" COLOR="white">Last Modified Date:</FONT></B>  
 <!--#echo var="LAST_MODIFIED" -->  
 <noscript>(Enable JavaScript to see dynamic updates)</noscript>  
-<script>document.write('<FONT SIZE="4" COLOR="coral">' + document.lastModified + '</FONT>');</script>  
+<script>document.write('<FONT SIZE="4" COLOR="white">' + document.lastModified + '</FONT>');</script>  
 </P>
     </BODY>
 </HTML>
