--- a/customertestimonials.html
+++ b/customertestimonials.html
@@ -8,7 +8,7 @@
     <table width="100%" bgcolor="coral" cellspacing="0" cellpadding="0">
       <tr>
         <td align="center" valign="top">
-          <font face="Verdana, Geneva, sans-serif" size="5" color="white">
+          <font face="Times New Roman" size="5" color="white">
             <h2><b>Customer Testimonials</b></h2>
           </font>
         </td>
@@ -150,7 +150,7 @@
           <p>
   <b>Want to share your experience with us? We'd love to hear from you!</b> <br>
   Leave a review on our official review page - 
-  <a href="https://www.trustpilot.com/">Write a Review on trustpilot</a>
+  <a href="https://www.trustpilot.com/" TARGET="_blank">Write a Review on trustpilot</a>
 </p>
 
 <p>
